--- a/day_019_file_handling.ipynb
+++ b/day_019_file_handling.ipynb
@@ -32,14 +32,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "5fb9701e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:/Users/user/Desktop/30-Days-of-Python/data/melina_trump_speech.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[38], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m             words\u001b[38;5;241m.\u001b[39mextend(line\u001b[38;5;241m.\u001b[39msplit())\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe number of lines and words in the file are \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(lines)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m and \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(words)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m respectively\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 16\u001b[0m \u001b[43mcount_num_lines_words\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC:/Users/user/Desktop/30-Days-of-Python/data/melina_trump_speech.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m count_num_lines_words(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/user/Desktop/30-Days-of-Python/data/donald_speech.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     18\u001b[0m count_num_lines_words(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/user/Desktop/30-Days-of-Python/data/michelle_obama_speech.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[38], line 9\u001b[0m, in \u001b[0;36mcount_num_lines_words\u001b[1;34m(file)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcount_num_lines_words\u001b[39m(file):\n\u001b[1;32m----> 9\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     10\u001b[0m         lines \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[0;32m     11\u001b[0m         words \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/Users/user/Desktop/30-Days-of-Python/data/melina_trump_speech.txt'"
+     ]
+    }
+   ],
    "source": [
     "#Q1\n",
+    "import re\n",
+    "import json\n",
+    "import csv\n",
+    "import sys \n",
+    "sys.path.append(\"data\")\n",
+    "\n",
     "def count_num_lines_words(file):\n",
     "    with open(file) as f:\n",
     "        lines = f.readlines()\n",
@@ -48,10 +68,10 @@
     "            line = re.sub(r'[^\\w\\s]','',line)\n",
     "            words.extend(line.split())\n",
     "    print(f'The number of lines and words in the file are {len(lines)} and {len(words)} respectively')\n",
-    "count_num_lines_words(\"C:\\Users\\user\\Desktop\\30-Days-of-Python\\data\\melina_trump_speech.txt\")\n",
-    "count_num_lines_words(\"C:\\Users\\user\\Desktop\\30-Days-of-Python\\data\\donald_speech.txt\")\n",
-    "count_num_lines_words(\"C:\\Users\\user\\Desktop\\30-Days-of-Python\\data\\michelle_obama_speech.txt\")\n",
-    "count_num_lines_words(\"C:\\Users\\user\\Desktop\\30-Days-of-Python\\data\\obama_speech.txt\")"
+    "count_num_lines_words(\"C:/Users/user/Desktop/30-Days-of-Python/data/melina_trump_speech.txt\")\n",
+    "count_num_lines_words(\"C:/Users/user/Desktop/30-Days-of-Python/data/donald_speech.txt\")\n",
+    "count_num_lines_words(\"C:/Users/user/Desktop/30-Days-of-Python/data/michelle_obama_speech.txt\")\n",
+    "count_num_lines_words(\"C:/Users/user/Desktop/30-Days-of-Python/data/obama_speech.txt\")"
    ]
   },
   {
